- fix gap again

--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ h2 {
 #comment {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 0.8rem;
   color: var(--low-black-text);
   font-weight: 400;
   font-size: 11pt;
